Newsletter: fix Dark Box background

--- a/templates/content/node--newsletter--email-html.html.twig
+++ b/templates/content/node--newsletter--email-html.html.twig
@@ -62,7 +62,7 @@
 {% if designType == 'classic' %}
   {% set classicStyle = 'background: white;margin-top: -50px; mso-background-alt: #fff !important;'%}
   {% set divStyles = 'background-color: #fff; color: #fff; mso-style-textfill-type:solid !important; mso-style-textfill-fill-color: #fff !important;' %}
-  {% set aStyles = 'color: white; text-decoration: none;  mso-style-textfill-type:solid !important; mso-style-textfill-fill-color: #cfb87b !important;' %}
+  {% set aStyles = 'color: #cfb87b; text-decoration: none;  mso-style-textfill-type:solid !important; mso-style-textfill-fill-color: #cfb87b !important;' %}
   {% set pStyles = 'color:black; mso-style-textfill-type:solid !important; mso-style-textfill-fill-color: black !important;' %}
   {% set headerStyles = 'width:100%;background-color: black; padding-bottom:10px; mso-style-textfill-type:solid !important; mso-style-textfill-fill-color: black !important;' %}
   {% set classicTableOffset = 'margin-top: -50px;padding:10px;' %}
