--- a/templates/paragraphs/paragraph--hero-slider-image.html.twig
+++ b/templates/paragraphs/paragraph--hero-slider-image.html.twig
@@ -10,7 +10,7 @@
   not paragraph.isPublished() ? 'paragraph--unpublished'
 ] %}
 
-{% set imgUrl = paragraph.field_hero_slide_image.entity.field_media_image.entity.fileuri|image_style('original_image_size') %}
+{% set imgUrl = paragraph.field_hero_slide_image.entity.field_media_image.entity.fileuri|image_style('hero_slider') %}
 {% set imgAlt = paragraph.field_hero_slide_image.entity.field_media_image.alt %}
 
 {% block paragraph %}
