--- a/templates/paragraphs/paragraph--hero-slider-image.html.twig
+++ b/templates/paragraphs/paragraph--hero-slider-image.html.twig
@@ -23,7 +23,7 @@
         <div class="carousel-caption d-md-block">
           <div class="hero-slider-image__content">
             <span class="hero-slider-image__text">
-              <p class="hero">{{ content.field_hero_slide_image_text|render|striptags|trim }}</p>
+              <p class="supersize">{{ content.field_hero_slide_image_text|render }}</p>
             </span>
           </div>
         </div>
