--- a/templates/block/block--ucb-hero-slider.html.twig
+++ b/templates/block/block--ucb-hero-slider.html.twig
@@ -42,14 +42,17 @@
                     </div>
                 {% endfor %}
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#{{ id }}" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#{{ id }}" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+            <div class="carousel-controls">
+                <button class="carousel-control-restart" type="button" data-bs-target="#{{ id }}" data-bs-slide-to="0" aria-label="Restart slideshow">
+                    <i class="fa-solid fa-rotate" aria-hidden="true"></i>
+                    <span class="visually-hidden">Restart</span>
+                </button>
+                <button class="carousel-control-playpause" type="button" aria-label="Pause slideshow">
+                    <i class="fa-solid fa-pause" aria-hidden="true"></i>
+                    <i class="fa-solid fa-play d-none" aria-hidden="true"></i>
+                    <span class="visually-hidden">Pause</span>
+                </button>
+            </div>
         </div>
     </div>
 {% endblock %}
