--- a/templates/block/block--ucb-hero-slider.html.twig
+++ b/templates/block/block--ucb-hero-slider.html.twig
@@ -5,6 +5,7 @@
 #}
 {% set classes = [
   'block',
+  'bs-background-unstyled',
   'block-' ~ configuration.provider|clean_class,
   'block-' ~ plugin_id|clean_class,
   bundle ? 'block--type-' ~ bundle|clean_class,
