--- a/templates/navigation/menu.html.twig
+++ b/templates/navigation/menu.html.twig
@@ -38,18 +38,15 @@
           item.is_unpublished ? 'unpublished'
         ] %}
         <li{{ item.attributes.addClass(classes) }}>
-        {% set title_string = item.title is iterable ? item.title['#markup'] : item.title %}
-          {% if title_string|upper == 'HOME' %}
-              <a{{ create_attribute({ href: item.url|render, class: 'ucb-home-button nav-link', title: title_string }) }}>
+          {% if item.title|upper == 'HOME' %}
+            <a{{ create_attribute({ href: item.url|render, class: 'ucb-home-button nav-link', title: item.title }) }}>
               <i class="fa-solid fa-home"></i>
               <span class="visually-hidden">{{ item.title }}</span>
             </a>
           {% else %}
-            {% set title_string = item.title is iterable ? item.title['#markup'] : item.title %}
-            {% set title = item.is_unpublished
-              ? { '#markup': '<i class="fa-solid fa-eye-slash"></i> ' ~ title_string|e ~ ' <span class="visually-hidden">(Unpublished)</span>' }
-              : title_string
-            %}
+            {% set title = item.is_unpublished ? {
+                '#markup': '<i class="fa-solid fa-eye-slash"></i> ' ~ item.title|e ~ ' <span class="visually-hidden">(Unpublished)</span>'
+              } : item.title %}
             {{ link(title, item.url, create_attribute({ class: 'nav-link' })) }}
             {% if item.below %}
               {{ menus.menu_links(item.below, attributes, menu_level + 1) }}
