--- a/css/layout-builder-styles.css
+++ b/css/layout-builder-styles.css
@@ -304,12 +304,14 @@
   background: var(--ucb-black);
   color: var(--ucb-white);
   margin: 20px 0;
+  padding: 20px;
 }
 
 .content-frame-dark-gray .column {
   background: rgba(0, 0, 0, 0.75);
   color: var(--ucb-white);
   margin: 20px 0;
+  padding: 20px;
 }
 
 .content-frame-dark-gray a,
